--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,100 +1,1 @@
-footer {
-    max-width: 1400px;
-    margin: 32px 0;
-    display: flex;
-    gap: 64px;
-    padding: 16px;
-    background-color: #4a4e69;
-    border-radius: 4px;
-    flex-wrap: wrap;
-}
-
-.footer-item {
-    width: calc(33.33333% - 43px);
-    color: #fff;
-}
-
-.footer-title {
-    font-size: 2.4rem;
-    margin-bottom: 18px;
-}
-
-.footer-content {
-    text-align: justify;
-    font-size: 1.6rem;
-}
-
-.footer-contact {
-    display: flex;
-    flex-direction: column;
-    gap: 22px 0;
-    font-size: 1.6rem;
-} 
-
-.contact-item a {
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    transition: .3s;
-}
-
-.contact-item a:hover {
-    color: #ffbe0b;
-}
-
-.contact-item a i {
-    font-size: 2.4rem;
-}
-
-form {
-    display: flex; 
-    flex-direction: column;
-    padding: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1.6rem;
-    color: #fff;
-}
-
-.form-input label {
-    margin-bottom: 12px;
-}
-
-.form-input label i {
-    margin-right: 6px;
-}
-
-.form-input input[type='email'] {
-    width: 100%;
-    background-color: transparent;
-    color: #fff;
-    padding: 12px 0;
-}
-
-.form-input textarea {
-    width: 100%;
-    outline: unset;
-    border: none;
-    color: #fff;
-    background-color: transparent;
-    resize: unset;
-    height: 200px;
-    padding: 12px 0;
-}
-
-.send-mail {
-    padding: 8px 12px;
-    font-size: 1.6rem;
-    width: 60px;
-    margin-left: auto;
-    border-radius: 4px;
-    background-color: #fff;
-    color: #000;
-    transition: .3s;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.send-mail:hover {
-    background-color: #ffbe0b;
-}
-
+.contact-item a i,.footer-title{font-size:2.4rem}footer,form{display:flex;padding:16px}.form-input input[type=email],.form-input textarea{width:100%;background-color:transparent;padding:12px 0}footer{margin:32px 0;gap:64px;background-color:#4a4e69;border-radius:4px;flex-wrap:wrap}.footer-item{width:calc(33.33333% - 43px);color:#fff}.footer-title{margin-bottom:18px}.footer-contact,.footer-content,.send-mail,form{font-size:1.6rem}.footer-content{text-align:justify}.footer-contact{display:flex;flex-direction:column;gap:22px 0}.contact-item a{display:flex;gap:12px;align-items:center;transition:.3s}.contact-item a:hover{color:#ffbe0b}form{flex-direction:column;border:1px solid #ccc;border-radius:4px;color:#fff}.form-input label{margin-bottom:12px}.form-input label i{margin-right:6px}.form-input input[type=email]{color:#fff}.form-input textarea{outline:unset;border:none;color:#fff;resize:unset;height:200px}.send-mail{padding:8px 12px;width:60px;margin-left:auto;border-radius:4px;background-color:#fff;color:#000;transition:.3s;box-shadow:rgba(0,0,0,.24) 0 3px 8px}.send-mail:hover{background-color:#ffbe0b}
