--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,173 +1,1 @@
-.main-page > header {
-  position: fixed;
-  top: 0;
-  left: 64px;
-  right: 64px;
-  display: flex;
-  align-items: center;
-  background-color: var(--background-primary);
-  padding: 12px 0;
-  z-index: 9999;
-  gap: 12px;
-}
-.logo {
-  padding: 8px 0;
-  font-size: 2rem;
-  user-select: none;
-}
-.logo a {
-  color: #ffbe0b;
-}
-.menu-header {
-  display: flex;
-}
-.menu-header__item {
-  font-size: 1.8rem;
-  transition: 0.3s all ease;
-  color: #fff;
-  position: relative;
-  user-select: none;
-}
-
-.menu-header__item > a {
-  display: block;
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.menu-header__item > a > i {
-  margin-left: 2px;
-}
-
-.menu-header__item:hover {
-  outline: 1px dashed #ffbe0b;
-}
-
-.menu-header__item:hover > a,
-.menu-header__item:hover > a > i {
-  color: #ffbe0b;
-}
-
-.menu-header__item:nth-child(7):after,
-.menu-header__item:nth-child(6):after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 20px;
-  top: 80%;
-  left: 0;
-  background-color: transparent;
-  z-index: 9999;
-  cursor: pointer;
-}
-
-.menu-header__item:hover .item__list {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.item__list {
-  display: flex;
-  width: 600px;
-  max-height: 80vh;
-  overflow-y: auto;
-  overscroll-behavior-y: none;
-  opacity: 0;
-  flex-wrap: wrap;
-  gap: 12px;
-  list-style: none;
-  padding: 16px;
-  background-color: #313150;
-  border-radius: 4px;
-  position: absolute;
-  top: 50px;
-  z-index: 100;
-  pointer-events: none;
-  transition: 0.2s;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.item__list > li {
-  width: calc(33.3333% - 8px);
-  font-size: 1.6rem;
-  cursor: pointer;
-}
-
-.item__list > li a {
-  display: block;
-  transition: 0.3s;
-  padding: 4px 12px;
-}
-
-.item__list > li a:hover {
-  color: #ffbe0b;
-  outline: 1px dashed;
-}
-
-.search {
-  flex: 1;
-  display: flex;
-  justify-content: end;
-  position: relative;
-}
-
-.search input {
-  width: 400px;
-  background-color: #4a4e69;
-  padding: 8px 32px 8px 16px;
-  font-size: 1.6rem;
-  color: #fff;
-  border-radius: 6px 0 0 6px;
-  transition: 0.3s;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.search-btn {
-  width: 40px;
-  font-size: 1.8rem;
-  border-radius: 0 6px 6px 0;
-  background-color: #4a4e69;
-  color: #fff;
-  transition: background 0.3s;
-}
-
-.search-btn:hover {
-  background-color: #5d6282;
-}
-
-.search input:focus ~ .reset-value {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.reset-value {
-  cursor: text;
-  opacity: 0;
-  position: absolute;
-  background-color: transparent;
-  color: #fff;
-  font-size: 1.8rem;
-  top: 50%;
-  right: 50px;
-  transform: translateY(-50%);
-  transition: 0.3s;
-}
-
-.reset-value:hover {
-  color: #ffbe0b;
-}
-
-.bars {
-  display: none;
-  font-size: 3rem;
-  color: #fff;
-  cursor: pointer;
-}
-
-.close {
-  display: none;
-  position: absolute;
-  color: #fff;
-  font-size: 4rem;
-  z-index: 10000;
-  cursor: pointer;
-}
+.logo a,.menu-header__item:hover>a,.menu-header__item:hover>a>i,.reset-value:hover{color:#ffbe0b}.item__list,.menu-header,.search{display:flex}.item__list,.search input{box-shadow:rgba(0,0,0,.24) 0 3px 8px}.main-page>header{position:fixed;top:0;left:64px;right:64px;display:flex;align-items:center;background-color:var(--background-primary);padding:12px 0;z-index:9999;gap:12px}.logo{padding:8px 0;font-size:2rem;user-select:none}.menu-header__item{font-size:1.8rem;transition:.3s;color:#fff;position:relative;user-select:none}.menu-header__item>a{display:block;padding:8px 12px;cursor:pointer}.menu-header__item>a>i{margin-left:2px}.menu-header__item:hover{outline:#ffbe0b dashed 1px}.menu-header__item:nth-child(6):after,.menu-header__item:nth-child(7):after{content:"";position:absolute;width:100%;height:20px;top:80%;left:0;background-color:transparent;z-index:9999;cursor:pointer}.menu-header__item:hover .item__list{opacity:1;pointer-events:auto}.item__list{width:600px;max-height:80vh;overflow-y:auto;overscroll-behavior-y:none;opacity:0;flex-wrap:wrap;gap:12px;list-style:none;padding:16px;background-color:#313150;border-radius:4px;position:absolute;top:50px;z-index:100;pointer-events:none;transition:.2s}.search input,.search-btn{background-color:#4a4e69;color:#fff}.item__list>li{width:calc(33.3333% - 8px);font-size:1.6rem;cursor:pointer}.item__list>li a{display:block;transition:.3s;padding:4px 12px}.item__list>li a:hover{color:#ffbe0b;outline:dashed 1px}.search{flex:1;justify-content:end;position:relative}.search input{width:400px;padding:8px 32px 8px 16px;font-size:1.6rem;border-radius:6px 0 0 6px;transition:.3s}.search-btn{width:40px;font-size:1.8rem;border-radius:0 6px 6px 0;transition:background .3s}.search-btn:hover{background-color:#5d6282}.search input:focus~.reset-value{opacity:1;cursor:pointer}.reset-value{cursor:text;opacity:0;position:absolute;background-color:transparent;color:#fff;font-size:1.8rem;top:50%;right:50px;transform:translateY(-50%);transition:.3s}.bars,.close{display:none;color:#fff;cursor:pointer}.bars{font-size:3rem}.close{position:absolute;font-size:4rem;z-index:10000}
