--- a/assets/css/infoMovie.css
+++ b/assets/css/infoMovie.css
@@ -1,46 +1,1 @@
-.background-movie {
-    width: 100%;
-    position: relative;
-}
-
-.background-movie figure {
-    height: 500px;
-    border-radius: 4px;
-    overflow: hidden;
-}
-
-.background-movie__info {
-    position: absolute;
-    bottom: 32px;
-    left: 32px;
-    padding: 8px;
-}
-
-.background-movie__info h3 {
-    font-size: 3rem;
-    color: #fff;
-    text-transform: uppercase;
-    margin-bottom: 12px;
-}
-
-.info-bottom {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-}
-
-
-.information-movie {
-    margin: 32px 0;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    font-size: 2rem;
-}
-
-.infomation-movie__actor li,
-.infomation-movie__category li {
-    margin-left: 32px;
-    font-size: 1.8rem;
-}
+.background-movie{width:100%;position:relative}.background-movie figure{height:500px;border-radius:4px;overflow:hidden}.background-movie__info{position:absolute;bottom:32px;left:32px;padding:8px}.background-movie__info h3{font-size:3rem;color:#fff;text-transform:uppercase;margin-bottom:12px}.info-bottom{display:flex;align-items:center;gap:6px}.information-movie{margin:32px 0;color:#fff;display:flex;flex-direction:column;gap:12px;font-size:2rem}.infomation-movie__actor li,.infomation-movie__category li{margin-left:32px;font-size:1.8rem}
