--- a/assets/css/toastMessage.css
+++ b/assets/css/toastMessage.css
@@ -1,109 +1,1 @@
-#toast {
-    position: fixed;
-    top: 32px;
-    right: 32px;
-    z-index: 99999;
-}
-
-.toast {
-    display: flex;
-    align-items: center;
-    padding: 8px 12px;
-    border: 2px solid;
-    border-radius: 12px;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
-    margin-bottom: 12px;
-    width: 400px;
-}
-
-@keyframes slideInLeft {
-    from {
-        opacity: 0;
-        transform: translateX(calc(100% + 32px));
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes fadeOut {
-    to {
-        opacity: 0;
-    }
-}
-
-.toast--success, 
-.toast--welcome {
-    background-color: #F6FFF9;
-    border-color: #48C1B5;
-}
-
-.toast--error {
-    background-color: #FFF5F3;
-    border-color: #F4B0A1;
-}
-
-
-.toast--success .toast__icon,
-.toast--welcome .toast__icon {
-    background-image: linear-gradient(to bottom, #48CA93, #48BACA);
-}
-
-.toast--error .toast__icon {
-    background-image: linear-gradient(to bottom, #E88B76, #CA5048);
-}
-
-.toast__icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    width: 28px;
-    height: 28px;
-    padding: 8px;
-    font-size: 1.6rem;
-    border-radius: 8px;
-    margin: 0 18px 18px 0;
-}
-
-.toast__body {
-    flex-grow: 1;
-    color: #fff;
-}
-
-.toast__title {
-    font-size: 1.8rem;
-    color: #27303A;
-    margin-bottom: 2px;
-}
-
-.toast__message {
-    font-size: 1.6rem;
-    color: #2F3F53;
-}
-
-.toast__message > a {
-    color: #48C1B5;
-    font-size: 1.5rem;
-    text-decoration: underline;
-}
-
-.toast__message.toast--success {
-    color: #48C1B5;
-
-}
-
-.toast__close {
-    font-size: 2.8rem;
-    transition: .3s;
-    color: #22223b;
-    margin: 0 0 22px 18px;
-    cursor: pointer;
-    transition: .3s;
-}
-
-.toast__close:hover {
-    opacity: .8;
-}
-
+#toast{position:fixed;top:32px;right:32px;z-index:99999}.toast{display:flex;align-items:center;padding:8px 12px;border:2px solid;border-radius:12px;box-shadow:0 2px 3px rgba(0,0,0,.3);margin-bottom:12px;width:400px}@keyframes slideInLeft{from{opacity:0;transform:translateX(calc(100% + 32px))}to{opacity:1;transform:translateX(0)}}@keyframes fadeOut{to{opacity:0}}.toast--success,.toast--welcome{background-color:#f6fff9;border-color:#48c1b5}.toast--error{background-color:#fff5f3;border-color:#f4b0a1}.toast--success .toast__icon,.toast--welcome .toast__icon{background-image:linear-gradient(to bottom,#48ca93,#48baca)}.toast--error .toast__icon{background-image:linear-gradient(to bottom,#e88b76,#ca5048)}.toast__icon{display:flex;align-items:center;justify-content:center;color:#fff;width:28px;height:28px;padding:8px;font-size:1.6rem;border-radius:8px;margin:0 18px 18px 0}.toast__body{flex-grow:1;color:#fff}.toast__title{font-size:1.8rem;color:#27303a;margin-bottom:2px}.toast__message{font-size:1.6rem;color:#2f3f53}.toast__message>a{color:#48c1b5;font-size:1.5rem;text-decoration:underline}.toast__message.toast--success{color:#48c1b5}.toast__close{font-size:2.8rem;transition:.3s;color:#22223b;margin:0 0 22px 18px;cursor:pointer}.toast__close:hover{opacity:.8}
