--- a/assets/css/watchMovie.css
+++ b/assets/css/watchMovie.css
@@ -1,1 +1,48 @@
-.detail-movie{position:relative}.view-iframe{margin-bottom:32px}.view-iframe iframe{width:100%;height:400px}.name-movie{font-size:3rem;margin:24px 0;color:#fff}.episode-list{display:flex;gap:12px;margin-bottom:50px;flex-wrap:wrap}.episode{display:flex;align-items:center;justify-content:center;white-space:nowrap;width:calc(6.66666% - 11.5px);min-height:40px;background-color:var(--primry-color);font-size:1.6rem;font-weight:600;transition:.3s;border-radius:3px;cursor:pointer;user-select:none}.episode:hover{opacity:.8}.episode.active{cursor:not-allowed;user-select:none;pointer-events:none;background-color:#3a86ff}
+.detail-movie {
+  position: relative;
+}
+.view-iframe {
+  margin-bottom: 32px;
+  border-radius: 3px;
+  border: 2px solid #4a4e69;
+  height: 400px;
+}
+.view-iframe iframe {
+  width: 100%;
+  height: 100%;
+}
+.name-movie {
+  font-size: 3rem;
+  margin: 24px 0;
+  color: #fff;
+}
+.episode-list {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 50px;
+  flex-wrap: wrap;
+}
+.episode {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  width: calc(6.66666% - 11.5px);
+  min-height: 40px;
+  background-color: var(--primry-color);
+  font-size: 1.6rem;
+  font-weight: 600;
+  transition: 0.3s;
+  border-radius: 3px;
+  cursor: pointer;
+  user-select: none;
+}
+.episode:hover {
+  opacity: 0.8;
+}
+.episode.active {
+  cursor: not-allowed;
+  user-select: none;
+  pointer-events: none;
+  background-color: #3a86ff;
+}
