--- a/assets/css/toastMessage.css
+++ b/assets/css/toastMessage.css
@@ -12,8 +12,7 @@
   border-radius: 12px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
   margin-bottom: 12px;
-  min-width: 400px;
-  max-width: 420px;
+  width: 400px;
 }
 @keyframes slideInLeft {
   from {
